--- a/HeadHunter Data Analysis-SQL.ipynb
+++ b/HeadHunter Data Analysis-SQL.ipynb
@@ -49,34 +49,41 @@
     {
       "cell_type": "code",
       "execution_count": 3,
-      "id": "oVKH4ehvf8Ay",
-      "metadata": {
-        "id": "oVKH4ehvf8Ay"
-      },
-      "outputs": [],
+      "id": "afa4469c",
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['config.ini']"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "DBNAME = 'project_sql'\n",
-        "USER = 'skillfactory'\n",
-        "PASSWORD = 'cCkxxLVrDE8EbvjueeMedPKt'\n",
-        "HOST = '84.201.134.129'\n",
-        "PORT = 5432"
+        "# Сохраняем отдельно от кода логин и пароль и т.д. в файл config.ini и для работы извлекаем его через configparser\n",
+        "import configparser\n",
+        "config = configparser.ConfigParser()\n",
+        "config.read('config-sf.ini', encoding='utf-8-sig')\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": 4,
-      "id": "G4X_q8KBf7SF",
-      "metadata": {
-        "id": "G4X_q8KBf7SF"
-      },
+      "id": "1af38e70",
+      "metadata": {},
       "outputs": [],
       "source": [
+        "# считываем пароли из config.ini\n",
         "connection = psycopg2.connect(\n",
-        "    dbname=DBNAME,\n",
-        "    user=USER,\n",
-        "    host=HOST,\n",
-        "    password=PASSWORD,\n",
-        "    port=PORT\n",
+        "    dbname=config.get('mysql', 'DBNAME'),\n",
+        "    user=config.get('mysql', 'USER'),\n",
+        "    host=config.get('mysql', 'HOST'),\n",
+        "    password=config.get('mysql','PASSWORD'),\n",
+        "    port=config.get('mysql', 'PORT')\n",
         ")"
       ]
     },
@@ -458,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "id": "3f069da6-fdc9-4ae7-b514-fafe2675efd3",
       "metadata": {
         "id": "3f069da6-fdc9-4ae7-b514-fafe2675efd3"
@@ -570,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 15,
       "id": "0c44b350-72eb-4d65-8b54-a1fc449ba9fd",
       "metadata": {
         "id": "0c44b350-72eb-4d65-8b54-a1fc449ba9fd"
@@ -592,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 16,
       "id": "rhvwaMDkoWTi",
       "metadata": {
         "id": "rhvwaMDkoWTi"
@@ -663,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "id": "603cdbe4-0ec3-4106-8eaf-c73fcdd29165",
       "metadata": {
         "id": "603cdbe4-0ec3-4106-8eaf-c73fcdd29165"
@@ -680,7 +687,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 18,
       "id": "pswpAb66ovZZ",
       "metadata": {
         "id": "pswpAb66ovZZ"
@@ -748,7 +755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 19,
       "id": "1ea710ec-871b-431e-9462-c7d0fd87011b",
       "metadata": {
         "id": "1ea710ec-871b-431e-9462-c7d0fd87011b"
@@ -770,7 +777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 20,
       "id": "lGUVqavdo4JQ",
       "metadata": {
         "id": "lGUVqavdo4JQ"
@@ -959,7 +966,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 21,
       "id": "5b3a8e79-f7ab-4008-b767-12aea3a205ea",
       "metadata": {
         "id": "5b3a8e79-f7ab-4008-b767-12aea3a205ea"
@@ -980,7 +987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 22,
       "id": "3Is64Y-hpDpq",
       "metadata": {
         "id": "3Is64Y-hpDpq"
@@ -1098,7 +1105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 23,
       "id": "f2d62796-d400-4ec1-a675-88112739a50e",
       "metadata": {
         "id": "f2d62796-d400-4ec1-a675-88112739a50e"
@@ -1118,7 +1125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 24,
       "id": "64tOMkAxqkQk",
       "metadata": {
         "id": "64tOMkAxqkQk"
@@ -1211,7 +1218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 25,
       "id": "dd7df27a-e3e8-412e-a21a-5d389b71e891",
       "metadata": {
         "id": "dd7df27a-e3e8-412e-a21a-5d389b71e891"
@@ -1233,7 +1240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 26,
       "id": "x1ikWbydrbf6",
       "metadata": {
         "id": "x1ikWbydrbf6"
@@ -1303,7 +1310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 27,
       "id": "6271f8ad-bd2e-4196-ae4a-5b39c4c1010e",
       "metadata": {
         "id": "6271f8ad-bd2e-4196-ae4a-5b39c4c1010e"
@@ -1322,7 +1329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 28,
       "id": "1EIvX3HasH4F",
       "metadata": {
         "id": "1EIvX3HasH4F"
@@ -1414,7 +1421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 29,
       "id": "80defb23-bfb1-4a18-8be6-bf36aa7165d5",
       "metadata": {
         "id": "80defb23-bfb1-4a18-8be6-bf36aa7165d5"
@@ -1432,7 +1439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 30,
       "id": "Dp_yCx6ysQSu",
       "metadata": {
         "id": "Dp_yCx6ysQSu"
@@ -1498,7 +1505,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 31,
       "id": "973b0cfc-a972-470a-8b4a-68744ef220c4",
       "metadata": {
         "id": "973b0cfc-a972-470a-8b4a-68744ef220c4"
@@ -1514,13 +1521,13 @@
         "        group by e.name\n",
         "        having count(i.industry_id)=4\n",
         "        order by 1\n",
-        "        limit 3\n",
+        "        offset 2 limit 1\n",
         "        '''"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 32,
       "id": "xsPtpp8EsaED",
       "metadata": {
         "id": "xsPtpp8EsaED"
@@ -1554,16 +1561,6 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>101 Интернет</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>21vek.by</td>\n",
-              "      <td>4</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
               "      <td>2ГИС</td>\n",
               "      <td>4</td>\n",
               "    </tr>\n",
@@ -1572,10 +1569,8 @@
               "</div>"
             ],
             "text/plain": [
-              "           name  count\n",
-              "0  101 Интернет      4\n",
-              "1      21vek.by      4\n",
-              "2          2ГИС      4"
+              "   name  count\n",
+              "0  2ГИС      4"
             ]
           },
           "metadata": {},
@@ -1600,7 +1595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 33,
       "id": "ad3f270f-2991-47eb-929b-e8f88a55b0d1",
       "metadata": {
         "id": "ad3f270f-2991-47eb-929b-e8f88a55b0d1"
@@ -1619,7 +1614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 34,
       "id": "H72qxWM0shPR",
       "metadata": {
         "id": "H72qxWM0shPR"
@@ -1777,7 +1772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 35,
       "id": "54ab0e50-c0f1-47cc-a54b-bc5c8bc363f9",
       "metadata": {
         "id": "54ab0e50-c0f1-47cc-a54b-bc5c8bc363f9"
@@ -1795,7 +1790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 36,
       "id": "9F1meAqsuUjd",
       "metadata": {
         "id": "9F1meAqsuUjd"
@@ -1876,7 +1871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 37,
       "id": "9c61b3c0-bb66-46c9-ae1e-81d3f5752b4a",
       "metadata": {
         "id": "9c61b3c0-bb66-46c9-ae1e-81d3f5752b4a"
@@ -1901,7 +1896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 38,
       "id": "ZNM-LLYuu1dj",
       "metadata": {
         "id": "ZNM-LLYuu1dj"
@@ -1969,7 +1964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 39,
       "id": "69621713-0cc5-4f1b-a1d7-bb144fa6148c",
       "metadata": {
         "id": "69621713-0cc5-4f1b-a1d7-bb144fa6148c"
@@ -1994,7 +1989,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 40,
       "id": "alA8WEAAvGdf",
       "metadata": {
         "id": "alA8WEAAvGdf"
@@ -2062,7 +2057,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 41,
       "id": "0036a355-9ccf-4564-8b01-73d8194297e7",
       "metadata": {
         "id": "0036a355-9ccf-4564-8b01-73d8194297e7"
@@ -2088,7 +2083,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 42,
       "id": "1i-5WyucvQ6v",
       "metadata": {
         "id": "1i-5WyucvQ6v"
@@ -2296,7 +2291,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1"
+      "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
